# cardego

./: .gitignore  Cargo.toml  README.md  askama.toml  build.rs
assets/: cardego-ymir.sqlite3
config/log4rs/: log4rs.yml
runtime-config/log4rs/: log4rs.yml
rust/: Cargo.toml
rust/old-data-server/: build.rs
rust/old-data-server/log4rs/: log4rs.yml
rust/old-data-server/src/: database.rs
rust/old-data-server/templates/: card.css
rust/src/: schema.rs
rust/templates/: common.html
rust/workspace/cardego-data-db/: Cargo.toml
rust/workspace/cardego-data-db-schema/: Cargo.toml
rust/workspace/cardego-data-db-schema/src/: attributes.rs  entities.rs  entity_to_attributes.rs  entity_to_entities.rs  entity_to_properties.rs  mod.rs  prelude.rs
rust/workspace/cardego-data-db/src/: data.rs  lib.rs  tables.rs
rust/workspace/cardego-data-db/src/tables/: attributes.rs  attributes_to_attributes.rs  cards.rs  cards_to_attributes.rs  decks.rs  decks_to_cards.rs  prelude.rs
rust/workspace/cardego-data-schema-migration/: Cargo.toml
rust/workspace/cardego-data-server/: Cargo.toml
rust/workspace/cardego-data-server/src/: collections.rs  lib.rs  models.rs
rust/workspace/cardego-data-server/src/models/: types.rs
rust/workspace/cardego-data-server/templates/: cardsheet.html
rust/workspace/cardego-grpc/: Cargo.toml  build.rs
rust/workspace/cardego-grpc-server/: Cargo.toml
rust/workspace/cardego-grpc-server/src/: app.rs  lib.rs  main.rs
rust/workspace/cardego-grpc-wasm-client/: Cargo.toml
rust/workspace/cardego-grpc-wasm-client/src/: client.rs  lib.rs
rust/workspace/cardego-grpc/proto/: cardego-data-service.proto
rust/workspace/cardego-grpc/src/: lib.rs
rust/workspace/data-server/: Cargo.toml
rust/workspace/old-data-server/: Cargo.toml
rust/workspace/old-data-server/src/image/: mod.rs  templates.rs
rust/workspace/old-data-server/src/search/query/: mod.rs
src/: api_syntax.rs  database.rs  errors.rs  image.rs  lib.rs  main.rs  models.rs  schema.rs  search.rs
src/image/: mod.rs  templates.rs
src/search/: mod.rs
src/search/parser/: mod.rs  rules.rs
src/search/query/: ast.rs  mod.rs
src/search/query/parser/: rules.rs
src/search/query/serde/: mod.rs
src/search/query/serde/common/: sql.rs
src/search/query/transform/common/: mod.rs  sql.rs
static/templates/: card.css  card.html  cardsheet.html  macro-card.html  single-card.html
workspace/: Cargo.toml
workspace/cardego-data-model/: Cargo.toml
workspace/cardego-data-model/src/models/: attributes.rs  attributes_to_attributes.rs  cards.rs  cards_to_attributes.rs  cardsets.rs  cardsets_to_cards.rs  mod.rs  prelude.rs
workspace/cardego-database/: Cargo.toml
workspace/cardego-database/src/: error.rs  lib.rs
workspace/cardego-database/src/models/: attributes_to_attributes.rs  cards.rs  cards_to_attributes.rs
workspace/cardego-database/src/shapes/: full_card.rs  mod.rs
workspace/cardego-image/: Cargo.toml
workspace/cardego-image/src/: lib.rs  templates.rs
workspace/cardego-server/: Cargo.toml
workspace/cardego-server/src/: app.rs  config.rs  error.rs  lib.rs  routes.rs
workspace/static/templates/: single-card.html
