[package]
name = "cardego-server"
version = "0.1.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
actix-web = "2"
actix-rt = "1"
rocket = "0.4.4"
log4rs = { version = "0.11.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"]}
diesel = { version = "1.4.4", features = ["sqlite"]}
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.52"
anyhow = "1.0.28"
thiserror = "1.0"
derive_more = "0.99.5"
