[workspace]

members = [
    "workspace/data-server",
]

[workspace.dependencies]
anyhow = "1.0.28"
axum = "0.6.4"
derive_more = "0.99.5"
futures = "0.3.5"
futures-macro = "0.3.5"
futures-util = "0.3.5"
itertools = "0.10.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
lazy_static = "1"
log = "0.4.17"
metrics = "0.20.1"
tracing = "0.1.37"
regex = "1"
sea-orm = "0.10.7"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.52"
thiserror = "1.0"


# Itertools for group_by and other iterators