[workspace]
members = ["workspace/cardego-data-server", "workspace/cardego-data-db"]

[workspace.dependencies]
anyhow = "1.0.28"
axum = "0.6.4"
bimap = "0.6.2"
derive_more = "0.99.5"
eyre = "0.6.8"
indexmap = "1.9.2"
futures = "0.3.5"
futures-macro = "0.3.5"
futures-util = "0.3.5"
itertools = "0.10.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
lazy_static = "1"
log = "0.4.17"
metrics = "0.20.1"
petgraph = "0.6.2"
tracing = "0.1.37"
regex = "1"
sea-orm = "0.10.7"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
