[package]
name = "cardego-server"
version = "0.10.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cardego-server"
test = false
bench = false
path = "src/bin/cardego-server.rs"

[lib]
name = "cardego_server"
path = "src/lib.rs"


[dependencies]
log = "0.4.8"
axum = "0.4.8"
tokio = { version = "1.17.0", features = ["full"] }
