[package]
name = "cardego-server"
version = "0.10.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cardego-server"
test = false
bench = false
path = "src/bin/cardego-server.rs"

[lib]
name = "cardego_server"
path = "src/lib.rs"


[dependencies]
cardego-database = { path = "../cardego-database"}

log = "0.4.16"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

axum = "0.4.8"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"

serde = "1.0.136"
serde_json = "1.0.79"

anyhow = "1.0.56"
thiserror = "1.0.30"

