[package]
name = "cardego-grpc-wasm-client"
version = "0.1.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", default-features = false, optional = true}
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.61"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

cardego-grpc = { path = "../cardego-grpc", features=["client"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = {version = "*", default-features = false}
tonic = { version = "*", default-features = false, feature = ["codegen", "prost"]}
tonic-web-wasm-client = "*"