[package]
name = "cardego-data-server"
version = "0.10.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cardego-data-server"
path = "src/bin/main.rs"
test = false
bench = false